<resources>
    <string name="app_name">WES.CAPITALE</string>
    <string name="app_preference">DCapitale</string>
    <string name="bandoduan_button">bandoduan</string>
    <string name="button_accept">Đồng ý</string>
    <string name="button_cancel">Hủy bỏ</string>
    <string name="button_ch2phongngu">CH 2 PHÒNG NGỦ</string>
    <string name="button_ch3phongngu">CH 3 PHÒNG NGỦ</string>
    <string name="button_ch4phongngu">CH 4 PHÒNG NGỦ</string>
    <string name="button_chpenthouse">CH PENTHOUSE</string>
    <string name="button_download">Tải về</string>
    <string name="button_exit_app">Thoát</string>
    <string name="button_grant">Cấp phép</string>
    <string name="button_home_360">360 VIRTUAL TOUR</string>
    <string name="button_home_film">PHIM DỰ ÁN</string>
    <string name="button_home_khoicanho">KHỐI CĂN HỘ</string>
    <string name="button_home_map">BẢN ĐỒ DỰ ÁN</string>
    <string name="button_home_matbang">MẶT BẰNG CHỌN CĂN</string>
    <string name="button_khoicanho_giangvo">Góc nhìn ban công căn hộ nhìn hồ Giảng Võ</string>
    <string name="button_khoicanho_hotay">Góc nhìn ban công căn hộ nhìn Hồ Tây</string>
    <string name="button_khoicanho_ngockhanh">Góc nhìn ban công căn hộ nhìn hồ Ngọc Khánh</string>
    <string name="button_khoicanho_thule">Góc nhìn ban công căn hộ nhìn hồ Thủ Lệ</string>
    <string name="choncanho">Chọn căn hộ</string>
    <string name="dialog_permission_deny_message">Ứng dụng không có quyền truy cập thẻ nhớ. Không thể sử dụng ứng dụng!</string>
    <string name="dialog_permission_deny_title">Quyền không được cấp</string>
    <string name="downloading">Đang tải</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="error_miss_data">Dữ liệu không tồn tại. Bạn có muốn tải lại dữ liệu không?</string>
    <string name="ghi_chu">Thông số tại bản vẽ là tương đối. Thông số chính thức của từng căn hộ sẽ được quy định tại bản vẽ ký kết giữa Chủ đầu tư với Khách hàng.</string>
    <string name="policy">Ứng dụng cần tải dữ liệu (~120MB) để có thể hoạt động.\nBạn hãy bật wifi để download ổn định hơn.\nBạn có chắc chắn muốn tải dữ liệu?</string>
    <string name="unzip_success">Giải nén dữ liệu thành công.</string>
    <string name="unziping">Đang giải nén dữ liệu …</string>
</resources>
